--- a/LearnTuple.ipynb
+++ b/LearnTuple.ipynb
@@ -158,10 +158,238 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create Tuple\n",
+    "# Update Tuple\n",
+    "# Delete Tuple\n",
+    "# Slicing Tuple"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create Tuple:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Sumsung', 'Apple', 'Oneplus', 'LG')\n",
+      "<class 'tuple'>\n",
+      "140547884242800\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1:\n",
+    "\n",
+    "mobiles = ('Sumsung', 'Apple', 'Oneplus', 'LG')\n",
+    "print(mobiles)\n",
+    "print(type(mobiles))\n",
+    "print(id(mobiles))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "()\n",
+      "<class 'tuple'>\n",
+      "140547819941952\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2: \n",
+    "# Create the empty typle\n",
+    "\n",
+    "mobiles = ()\n",
+    "print(mobiles)\n",
+    "print(type(mobiles))\n",
+    "print(id(mobiles))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sumsung\n",
+      "<class 'str'>\n",
+      "('Sumsung',)\n",
+      "<class 'tuple'>\n",
+      "140547849733120\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3:\n",
+    "# Create tuple with single item\n",
+    "mobiles = ('Sumsung')\n",
+    "print(mobiles)\n",
+    "print(type(mobiles))\n",
+    "\n",
+    "\n",
+    "\n",
+    "mobiles = ('Sumsung',)\n",
+    "print(mobiles)\n",
+    "print(type(mobiles))\n",
+    "print(id(mobiles))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Sumsung', 'Apple', 'Oneplus', 'LG')\n",
+      "<class 'tuple'>\n",
+      "140547884242720\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4:\n",
+    "# Create tuple with collection of values\n",
+    "mobiles = 'Sumsung', 'Apple', 'Oneplus', 'LG'\n",
+    "print(mobiles)\n",
+    "print(type(mobiles))\n",
+    "print(id(mobiles))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Sumsung', 'Apple', 'Oneplus', 'LG', 1, 2, 3, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Update Tuple\n",
+    "\n",
+    "m = ('Sumsung', 'Apple', 'Oneplus', 'LG')\n",
+    "n = (1, 2, 3, 4)\n",
+    "\n",
+    "o = m + n\n",
+    "print(o)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'o' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-f7233db27c45>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m# del o[0]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mdel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mo\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'o' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Delete Tuple:\n",
+    "# We cant delete single item from tuple\n",
+    "# del o[0]\n",
+    "\n",
+    "del(o)\n",
+    "print(o)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Slicing tuple\n",
+    "\n",
+    "order = ('Sumsung', 'Apple', 'Oneplus', 'LG', 1, 2, 3, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Sumsung', 'Apple', 'Oneplus', 'LG')\n",
+      "('Sumsung', 'Apple', 'Oneplus', 'LG')\n",
+      "('Sumsung', 'Apple', 'Oneplus', 'LG')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(order[0:4])\n",
+    "print(order[:4])\n",
+    "print(order[:-4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 3, 2, 1, 'LG', 'Oneplus', 'Apple', 'Sumsung')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(order[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# covert tuple to list\n",
+    "\n",
+    "list"
+   ]
   }
  ],
  "metadata": {
